[package]
name = "rim"
version = "0.2.1"
authors = ["eomain"]
description = "Rouge image viewer"
edition = "2018"

[dependencies.rouge]
git = "https://github.com/eomain/rouge"

[dependencies.lexical-sort]
version = "0.3.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 512


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
